re PR debug/13841 (missing debug info for _Complex function arguments)

PR debug/13841
        * function.c (instantiate_decl): Recurse for CONCAT.

From-SVN: r89006